--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NguyenKimApp</string>
+    <string name="facebook_app_id">184514362403611</string>
+    <string name="fb_login_protocol_scheme">fb184514362403611</string>
 </resources>
